[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
crossterm = "0.26.1"
rand = "0.8.5"
random_word = "0.3.0"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
